# Copyright 2025 The Lynxtron Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

lib_cef_dll_sources = [
  "../../../../third_party/cef_binary/libcef_dll/shutdown_checker.cc",
  "../../../../third_party/cef_binary/libcef_dll/shutdown_checker.h",
  "../../../../third_party/cef_binary/libcef_dll/template_util.h",
  "../../../../third_party/cef_binary/libcef_dll/transfer_util.cc",
  "../../../../third_party/cef_binary/libcef_dll/transfer_util.h",
  "../../../../third_party/cef_binary/libcef_dll/wrapper_types.h",
]

lib_cef_dll_base_sources = [
  "../../../../third_party/cef_binary/libcef_dll/base/cef_atomic_flag.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_callback_helpers.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_callback_internal.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_dump_without_crashing.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_lock.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_lock_impl.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_logging.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_ref_counted.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_thread_checker_impl.cc",
  "../../../../third_party/cef_binary/libcef_dll/base/cef_weak_ptr.cc",
]

lib_cef_dll_sources += lib_cef_dll_base_sources

lib_cef_dll_cpptoc_sources = [
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/accessibility_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/accessibility_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/app_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/app_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/audio_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/audio_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/base_ref_counted_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/base_ref_counted_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/base_scoped_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/base_scoped_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/browser_process_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/browser_process_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/client_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/client_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/command_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/command_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/completion_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/completion_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/context_menu_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/context_menu_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/cookie_access_filter_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/cookie_access_filter_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/cookie_visitor_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/cookie_visitor_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/cpptoc_ref_counted.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/cpptoc_scoped.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/delete_cookies_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/delete_cookies_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/dev_tools_message_observer_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/dev_tools_message_observer_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/dialog_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/dialog_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/display_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/display_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/domvisitor_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/domvisitor_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/download_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/download_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/download_image_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/download_image_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/drag_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/drag_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/end_tracing_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/end_tracing_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/find_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/find_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/focus_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/focus_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/frame_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/frame_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/jsdialog_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/jsdialog_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/keyboard_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/keyboard_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/life_span_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/life_span_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/load_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/load_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/media_observer_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/media_observer_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/media_route_create_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/media_route_create_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/media_sink_device_info_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/media_sink_device_info_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/menu_model_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/menu_model_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/navigation_entry_visitor_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/navigation_entry_visitor_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/pdf_print_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/pdf_print_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/permission_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/permission_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/preference_observer_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/preference_observer_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/print_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/print_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/read_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/read_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/render_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/render_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/render_process_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/render_process_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/request_context_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/request_context_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/request_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/request_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resolve_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resolve_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resource_bundle_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resource_bundle_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resource_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resource_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resource_request_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/resource_request_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/response_filter_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/response_filter_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/run_file_dialog_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/run_file_dialog_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/scheme_handler_factory_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/scheme_handler_factory_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/server_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/server_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/set_cookie_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/set_cookie_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/setting_observer_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/setting_observer_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/string_visitor_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/string_visitor_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/task_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/task_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/urlrequest_client_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/urlrequest_client_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_accessor_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_accessor_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_array_buffer_release_callback_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_array_buffer_release_callback_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_handler_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_interceptor_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/v8_interceptor_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/browser_view_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/browser_view_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/button_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/button_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/menu_button_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/menu_button_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/panel_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/panel_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/textfield_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/textfield_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/view_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/view_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/window_delegate_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/views/window_delegate_cpptoc.h",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/write_handler_cpptoc.cc",
  "../../../../third_party/cef_binary/libcef_dll/cpptoc/write_handler_cpptoc.h",
]

lib_cef_dll_sources += lib_cef_dll_cpptoc_sources

lib_cef_dll_ctocpp_sources = [
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/auth_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/auth_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/before_download_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/before_download_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/binary_value_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/binary_value_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/browser_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/browser_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/browser_host_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/browser_host_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/command_line_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/command_line_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/context_menu_params_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/context_menu_params_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/cookie_manager_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/cookie_manager_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/ctocpp_ref_counted.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/ctocpp_scoped.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/dictionary_value_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/dictionary_value_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/domdocument_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/domdocument_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/domnode_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/domnode_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/download_item_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/download_item_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/download_item_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/download_item_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/drag_data_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/drag_data_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/file_dialog_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/file_dialog_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/frame_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/frame_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/image_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/image_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/jsdialog_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/jsdialog_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/list_value_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/list_value_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_access_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_access_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_route_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_route_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_router_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_router_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_sink_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_sink_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_source_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/media_source_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/menu_model_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/menu_model_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/navigation_entry_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/navigation_entry_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/permission_prompt_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/permission_prompt_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/post_data_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/post_data_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/post_data_element_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/post_data_element_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/preference_manager_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/preference_manager_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/preference_registrar_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/preference_registrar_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/print_dialog_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/print_dialog_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/print_job_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/print_job_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/print_settings_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/print_settings_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/process_message_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/process_message_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/registration_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/registration_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/request_context_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/request_context_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/request_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/request_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/resource_bundle_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/resource_bundle_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/resource_read_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/resource_read_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/resource_skip_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/resource_skip_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/response_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/response_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/run_context_menu_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/run_context_menu_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/run_quick_menu_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/run_quick_menu_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/scheme_registrar_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/scheme_registrar_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/select_client_certificate_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/select_client_certificate_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/server_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/server_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/shared_memory_region_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/shared_memory_region_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/shared_process_message_builder_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/shared_process_message_builder_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/sslinfo_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/sslinfo_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/sslstatus_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/sslstatus_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/stream_reader_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/stream_reader_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/stream_writer_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/stream_writer_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/task_manager_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/task_manager_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/task_runner_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/task_runner_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/thread_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/thread_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/unresponsive_process_callback_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/unresponsive_process_callback_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/urlrequest_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/urlrequest_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_context_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_context_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_exception_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_exception_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_stack_frame_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_stack_frame_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_stack_trace_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_stack_trace_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_value_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/v8_value_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/value_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/value_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/box_layout_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/box_layout_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/browser_view_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/browser_view_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/button_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/button_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/display_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/display_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/fill_layout_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/fill_layout_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/label_button_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/label_button_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/layout_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/layout_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/menu_button_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/menu_button_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/menu_button_pressed_lock_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/menu_button_pressed_lock_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/overlay_controller_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/overlay_controller_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/panel_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/panel_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/scroll_view_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/scroll_view_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/textfield_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/textfield_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/view_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/view_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/window_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/views/window_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/waitable_event_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/waitable_event_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/x509_cert_principal_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/x509_cert_principal_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/x509_certificate_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/x509_certificate_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/xml_reader_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/xml_reader_ctocpp.h",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/zip_reader_ctocpp.cc",
  "../../../../third_party/cef_binary/libcef_dll/ctocpp/zip_reader_ctocpp.h",
]

lib_cef_dll_sources += lib_cef_dll_ctocpp_sources

lib_cef_dll_wrapper_sources = [
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_browser_info_map.h",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_byte_read_handler.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_closure_task.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_message_router.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_message_router_utils.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_message_router_utils.h",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_resource_manager.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_scoped_temp_dir.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_stream_resource_handler.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_xml_object.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_zip_archive.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/libcef_dll_wrapper.cc",
  "../../../../third_party/cef_binary/libcef_dll/wrapper/libcef_dll_wrapper2.cc",
]

if (is_mac) {
  lib_cef_dll_wrapper_sources += [
    "../../../../third_party/cef_binary/libcef_dll/wrapper/cef_library_loader_mac.mm",
    "../../../../third_party/cef_binary/libcef_dll/wrapper/libcef_dll_dylib.cc",
  ]
}

lib_cef_dll_sources += lib_cef_dll_wrapper_sources

lib_cef_dll_sources_path = get_path_info(lib_cef_dll_sources, "abspath")
