# Copyright 2025 The Lynxtron Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("//lynx/oliver/oliver.gni")
if (is_mac) {
  import("//build/apple/templates/darwin_general_bundle.gni")

  build_kernel_js("lynx_core") {
    script = "//lynx/tools/js_tools/build.py"
    platform = "ios"
    output_path = "$root_build_dir/lynx_lynxtron"
  }

  bundle_data("lynx_core_js") {
    sources = [ "$root_build_dir/lynx_lynxtron/lynx_core.js" ]
    outputs = [ "{{bundle_resources_dir}}/lynx_core.js" ]
    public_deps = [ ":lynx_core" ]
  }

  darwin_general_bundle("lynx_resources_bundle_for_lynxtron") {
    bundle_identifier = "com.lynx.LynxResources"
    info_plist =
        "//lynx/explorer/darwin/macos/lynx_explorer/Resource/Info.plist"
    deployment_target = mac_deployment_target
    output_name = "lynx_lynxtron/LynxResources"
    public_deps = [ ":lynx_core_js" ]
  }

  bundle_data("lynx_resources") {
    sources = [ "$root_build_dir/lynx_lynxtron/LynxResources.bundle" ]

    outputs = [ "{{bundle_contents_dir}}/Resources/{{source_file_part}}" ]
    public_deps = [ ":lynx_resources_bundle_for_lynxtron" ]
  }
} else if (is_win) {
  build_kernel_js("lynx_core") {
    script = "//lynx/tools/js_tools/build.py"
    platform = "ios"
    output_path = "$root_build_dir"
  }
}

group("lynx_lib") {
  deps = []
  if (is_mac) {
    deps += [ "//lynx/platform/darwin/macos:lynx_common_deps" ]
  } else if (is_win) {
    deps += [
      ":lynx_core",
      "//lynx/platform/windows:lynx_windows_group",
    ]
  }
}
