# Copyright 2025 The Lynxtron Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("//build/config/compiler/compiler.gni")

source_set("lynx_holder") {
  sources = [
    "lynx_view.cc",
    "lynx_view.h",
    "lynx_view_extension_register.cc",
    "lynx_view_extension_register.h",
    "module/lynx_bridge_module.cc",
    "module/lynx_bridge_module.h",
    "module/lynx_emit_event.cc",
    "module/lynx_emit_event.h",
    "module/lynx_module_utils.cc",
    "module/lynx_module_utils.h",
    "module/lynx_native_module.cc",
    "module/lynx_native_module.h",
    "module/lynx_node_module.cc",
    "module/lynx_node_module.h",
  ]

  if (is_build_with_lynx) {
    defines = [
      "BUILD_WITH_LYNX=1",
      "USE_PRIMJS_NAPI=1",
    ]
  }

  include_dirs = [
    "../..",
    "..",
    "//third_party/node/deps/uv/include",
  ]

  configs -= [ "//build/config/compiler:chromium_code" ]
  configs += [ "//build/config/compiler:no_chromium_code" ]
  configs -= [ "//build/config/clang:find_bad_constructs" ]

  deps = [
    "//base",
    "//lynxtron/shell/lynx:lynx_lib",
    "//v8",
  ]
}
