config("ui_config") {
  include_dirs = [ ".." ]
}

source_set("ui") {
  public_configs = [ ":ui_config" ]
  include_dirs = [ "../.." ]
  deps = [ "//base" ]
  sources = [
    # "base/clipboard/clipboard.cc",
    # "base/clipboard/clipboard.h",
    # "base/clipboard/clipboard_buffer.h",
    # "base/clipboard/clipboard_constants.cc",
    # "base/clipboard/clipboard_constants.h",
    # "base/clipboard/clipboard_metrics.cc",
    # "base/clipboard/clipboard_metrics.h",
    # "base/clipboard/clipboard_sequence_number_token.h",
    # "base/clipboard/custom_data_helper.cc",
    # "base/clipboard/custom_data_helper.h",
    # "base/clipboard/file_info.cc",
    # "base/clipboard/file_info.h",
    # "base/clipboard/scoped_clipboard_writer.cc",
    # "base/clipboard/scoped_clipboard_writer.h",
    # "base/idle/idle.cc",
    # "base/idle/idle.h",
    # "base/idle/idle_internal.cc",
    # "base/idle/idle_internal.h",
    # "base/idle/idle_polling_service.cc",
    # "base/idle/idle_polling_service.h",
    # "base/idle/idle_time_provider.h",
    # "base/idle/scoped_set_idle_state.cc",
    # "base/idle/scoped_set_idle_state.h",
    # "base/resource/resource_scale_factor.cc",
    # "base/resource/resource_scale_factor.h",
    "base/ui_base_types.h",

    # "display/display.cc",
    # "display/display.h",
    # "display/display_change_notifier.cc",
    # "display/display_change_notifier.h",
    # "display/display_layout.cc",
    # "display/display_layout.h",
    # "display/display_layout_builder.cc",
    # "display/display_layout_builder.h",
    # "display/display_list.cc",
    # "display/display_list.h",
    # "display/display_observer.cc",
    # "display/display_observer.h",
    # "display/display_switches.cc",
    # "display/display_switches.h",
    # "display/screen.cc",
    # "display/screen.h",
    # "display/utils/display_util.cc",
    # "display/utils/display_util.h",
    "gfx/buffer_types.h",

    # "gfx/codec/jpeg_codec.cc",
    # "gfx/codec/jpeg_codec.h",
    # "gfx/codec/png_codec.cc",
    # "gfx/codec/png_codec.h",
    # "gfx/codec/vector_wstream.cc",
    # "gfx/codec/vector_wstream.h",
    # "gfx/color_space.cc",
    # "gfx/color_space.h",
    # "gfx/display_color_spaces.cc",
    # "gfx/display_color_spaces.h",
    "gfx/geometry/insets.cc",
    "gfx/geometry/insets.h",
    "gfx/geometry/insets_conversions.cc",
    "gfx/geometry/insets_conversions.h",
    "gfx/geometry/insets_f.cc",
    "gfx/geometry/insets_f.h",
    "gfx/geometry/insets_outsets_base.cc",
    "gfx/geometry/insets_outsets_base.h",
    "gfx/geometry/point.cc",
    "gfx/geometry/point.h",
    "gfx/geometry/point_conversions.cc",
    "gfx/geometry/point_conversions.h",
    "gfx/geometry/point_f.cc",
    "gfx/geometry/point_f.h",
    "gfx/geometry/rect.cc",
    "gfx/geometry/rect.h",
    "gfx/geometry/rect_conversions.cc",
    "gfx/geometry/rect_conversions.h",
    "gfx/geometry/rect_f.cc",
    "gfx/geometry/rect_f.h",
    "gfx/geometry/resize_utils.cc",
    "gfx/geometry/resize_utils.h",
    "gfx/geometry/size.cc",
    "gfx/geometry/size.h",
    "gfx/geometry/size_conversions.cc",
    "gfx/geometry/size_conversions.h",
    "gfx/geometry/size_f.cc",
    "gfx/geometry/size_f.h",

    # "gfx/geometry/skia_conversions.cc",
    # "gfx/geometry/skia_conversions.h",
    "gfx/geometry/vector2d.cc",
    "gfx/geometry/vector2d.h",
    "gfx/geometry/vector2d_conversions.cc",
    "gfx/geometry/vector2d_conversions.h",
    "gfx/geometry/vector2d_f.cc",
    "gfx/geometry/vector2d_f.h",

    # "gfx/geometry/vector3d_f.cc",
    # "gfx/geometry/vector3d_f.h",
    # "gfx/gpu_extra_info.cc",
    # "gfx/gpu_extra_info.h",
    # "gfx/hdr_static_metadata.cc",
    # "gfx/hdr_static_metadata.h",
    "native_widget_types.h",

    # "gfx/icc_profile.cc",
    # "gfx/icc_profile.h",
    # "gfx/image/image.cc",
    # "gfx/image/image.h",
    # "gfx/image/image_generic.cc",
    # "gfx/image/image_internal.h",
    # "gfx/image/image_platform.h",
    # "gfx/image/image_png_rep.cc",
    # "gfx/image/image_png_rep.h",
    # "gfx/image/image_skia.cc",
    # "gfx/image/image_skia.h",
    # "gfx/image/image_skia_operations.cc",
    # "gfx/image/image_skia_operations.h",
    # "gfx/image/image_skia_rep.h",
    # "gfx/image/image_skia_rep_default.cc",
    # "gfx/image/image_skia_rep_default.h",
    # "gfx/image/image_skia_source.cc",
    # "gfx/image/image_skia_source.h",
    # "gfx/image/image_util.cc",
    # "gfx/image/image_util.h",
    # "gfx/image/resize_image_dimensions.h",
    # "gfx/skia_color_space_util.cc",
    # "gfx/skia_color_space_util.h",
    # "gfx/switches.cc",
    # "gfx/switches.h",

    # "display/display.cc",
    # "display/display.h",
    # "display/display_change_notifier.cc",
    # "display/display_change_notifier.h",
    # "display/display_layout.cc",
    # "display/display_layout.h",
    # "display/display_layout_builder.cc",
    # "display/display_layout_builder.h",
    # "display/display_list.cc",
    # "display/display_list.h",
    # "display/display_observer.cc",
    # "display/display_observer.h",
    # "display/display_switches.cc",
    # "display/display_switches.h",
    # "display/screen.cc",
    # "display/screen.h",
    # "display/utils/display_util.cc",
    # "display/utils/display_util.h",
  ]
  if (is_win) {
    sources += [
      "gfx/win/hwnd_util.cc",
      "gfx/win/hwnd_util.h",
      "gfx/win/window_impl.cc",
      "gfx/win/window_impl.h",
      "platform_window/win/fullscreen_handler.cc",
      "platform_window/win/fullscreen_handler.h",
      "platform_window/win/hwnd_message_handler.cc",
      "platform_window/win/hwnd_message_handler.h",
      "platform_window/win/hwnd_message_handler_delegate.h",
      "platform_window/win/scoped_fullscreen_visibility.cc",
      "platform_window/win/scoped_fullscreen_visibility.h",

      # "base/win/internal_constants.cc",
      # "base/win/internal_constants.h",
    ]
  }
}
